fix: 修复语言按钮点击事件与 +2 按钮圆角绘制

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <header class="h-[6vw] w-full flex items-center bg-[#6b3889] text-white shrink-0">
                 <div class="left-content flex-1 flex items-center justify-center">
                     <div class="date-and-time flex items-center">
-                        <span class="time text-[3.5vw] font-bold leading-tight mr-[0.5vw]">—:—</span>
+                        <span class="time text-[3.5vw] font-bold leading-tight">—:—</span>
+
+                        <div class="w-[1vw]"></div>
+
                         <div class="week-and-date flex flex-col items-start">
                             <span class="week text-[1.6vw]">星期二</span>
                             <span class="date text-[1.8vw] leading-tight">—-—-—</span>
@@ -268,7 +271,7 @@
                                     <svg class="absolute inset-0 w-full h-full">
                                         <path class="bg fill-[#e8e8e8]" d="" />
                                     </svg>
-                                    <span class="relative z-10 text-[1.8vw] text-gray-700"
+                                    <span class="relative z-10 text-[1.8vw]"
                                         data-i18n="page.main.button.reset.label">重置</span>
                                 </button>
 
@@ -289,7 +292,7 @@
                 </div>
             </div>
         </div>
-        <div class="modal-overlay fixed inset-0 z-100 hidden items-center justify-center bg-black/60 backdrop-blur-sm transition-all duration-300"
+        <div class="modal-overlay fixed inset-0 z-100 items-center justify-center bg-black/60 backdrop-blur-sm transition-all duration-300"
             id="langOverlay">
             <div class="lang-modal relative w-[44vw] z-101 p-[1.5vw] flex flex-col items-center overflow-hidden"
                 id="langModal">
