--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="stretch"></div>
 
                 <!-- 副顶栏按钮组 -->
-                <div id="ticketModeGroup" class="flex items-center" data-mode="distance">
+                <div id="ticketModeGroup" class="flex items-center gap-[0.3vw]" data-mode="distance">
                     <!-- 按里程购票：左圆右方 -->
                     <button
                         class="tvm-button button-by-distance relative w-[16vw] h-[4vw] flex items-center justify-center cursor-pointer overflow-hidden transition-all duration-300 hover:brightness-95 active:brightness-90"
@@ -61,8 +61,6 @@
                         <span class="relative z-10 text-[1.8vw] text-black select-none transition-colors duration-300"
                             data-i18n="page.main.button.by_distance.label">按里程购票</span>
                     </button>
-
-                    <div class="w-[0.3vw]"></div>
 
                     <button
                         class="tvm-button button-by-fare relative w-[16vw] h-[4vw] flex items-center justify-center cursor-pointer overflow-hidden transition-all duration-300 hover:brightness-95 active:brightness-90"
