--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         <div class="tvm-container flex flex-col h-full w-full overflow-hidden bg-white shadow-2xl">
             <header class="h-[6vw] w-full flex items-center bg-[#6b3889] text-white shrink-0">
                 <div class="left-content flex-1 flex items-center justify-center">
-                    <div class="date-and-time flex items-center">
+                    <div class="date-and-time flex items-center gap-[1vw]">
                         <span class="time text-[3.5vw] font-bold leading-tight">—:—</span>
-
-                        <div class="w-[1vw]"></div>
 
                         <div class="week-and-date flex flex-col items-start">
                             <span class="week text-[1.6vw]">星期二</span>
