优化字体（.otf -> .woff2）

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                             class="relative z-10 w-[1.5vw] h-[1.5vw]" alt="-">
                                     </button>
 
-                                    <span class="count-value text-[3.5vw] font-black" style="line-height: 1;">2</span>
+                                    <span class="count-value text-[3.5vw] font-bold" style="line-height: 1;">2</span>
 
                                     <button
                                         class="btn-counter btn-plus tvm-button relative w-[4vw] h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
@@ -253,7 +253,7 @@
                                     data-i18n="page.main.panel.total_fare.label">应付总金额</div>
                                 <div class="price-wrapper flex items-baseline mt-[0.5vw]">
                                     <span class="currency text-[2.5vw] font-bold">¥</span>
-                                    <span class="amount text-[3.5vw] font-black leading-none">8</span>
+                                    <span class="amount text-[3.5vw] font-bold leading-none">8</span>
                                 </div>
                             </div>
 
