--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     </button>
                 </div>
 
-                <div class="w-[1vw]"></div>
+                <div class="w-[1.5vw]"></div>
 
                 <!-- 语言切换按钮：全圆角 -->
                 <button
@@ -85,7 +85,7 @@
                         data-i18n="page.main.button.language.label">语言 / Language</span>
                 </button>
 
-                <div class="w-[1vw]"></div>
+                <div class="w-[1.5vw]"></div>
 
                 <!-- 充值按钮：全圆角 -->
                 <button
@@ -107,7 +107,7 @@
                     <aside
                         class="tvm-panel-left w-[17vw] h-full flex flex-col items-center py-[1.5vw] bg-white shrink-0 shadow-[0_0vw_0.8vw_rgba(0,0,0,0.15)]">
                         <button
-                            class="tvm-button button-system-map active mb-[1.5vw] relative w-[14vw] h-[4vw] shrink-0 flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
+                            class="tvm-button button-system-map active mb-[1vw] relative w-[14vw] h-[4vw] shrink-0 flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                             data-line="all" data-active-color="#2e6aff">
                             <svg class="absolute inset-0 w-full h-full pointer-events-none">
                                 <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
@@ -189,15 +189,20 @@
 
                     <div class="stretch grow"></div>
                     <aside
-                        class="tvm-panel-right w-[22vw] h-full flex flex-col p-[1.5vw] bg-white shrink-0 shadow-[0_0vw_0.8vw_rgba(0,0,0,0.15)]">
+                        class="tvm-panel-right w-[22vw] h-full flex flex-col bg-white px-[1.5vw] shrink-0" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
 
                         <div class="stretch grow"></div>
 
-                        <div class="ticket-selection flex flex-col items-center">
-                            <div class="section-title text-[1.8vw] font-bold mb-[1vw]"
+                        <div class="ticket-selection relative flex flex-col items-center p-[1.5vw]">
+                            <svg
+                                class="absolute inset-0 w-full h-full pointer-events-none" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
+                                <path class="bg" fill="#ffffff" d="" />
+                            </svg>
+
+                            <div class="section-title text-[1.8vw] font-bold mb-[1vw] z-10"
                                 data-i18n="page.main.panel.ticket_count.label">票数</div>
 
-                            <div class="counter-main flex items-center justify-between w-[85%] mb-[1vw]">
+                            <div class="counter-main flex items-center justify-between w-full mb-[1vw]">
                                 <button
                                     class="btn-counter btn-minus tvm-button relative w-[4vw] h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                                     data-value="-">
@@ -208,7 +213,7 @@
                                         class="relative z-10 w-[1.5vw] h-[1.5vw]" alt="-">
                                 </button>
 
-                                <span class="count-value text-[3.5vw] font-bold" style="line-height: 1;">2</span>
+                                <span class="count-value text-[3.5vw] font-bold z-10" style="line-height: 1;">2</span>
 
                                 <button
                                     class="btn-counter btn-plus tvm-button relative w-[4vw] h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
@@ -221,7 +226,7 @@
                                 </button>
                             </div>
 
-                            <div class="counter-quick flex gap-[1vw] w-[85%]">
+                            <div class="counter-quick flex gap-[1vw] w-full">
                                 <button
                                     class="btn-quick tvm-button relative flex-1 h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                                     data-value="-2">
@@ -244,22 +249,28 @@
                             </div>
                         </div>
 
-                        <div class="my-[2vw] w-[14vw] h-[0.3vw] bg-gray-300 mx-auto rounded-full"></div>
+                        <div class="h-[1.5vw]"></div>
 
-                        <div class="fare-display flex flex-col items-center">
-                            <div class="section-title text-[1.8vw] font-bold"
+                        <!-- <div class="w-[14vw] h-[0.3vw] bg-gray-300 mx-auto rounded-full"></div> -->
+
+                        <!-- <div class="h-[1.5vw]"></div> -->
+
+                        <div class="fare-display relative flex flex-col items-center p-[1.5vw]">
+                            <svg class="absolute inset-0 w-full h-full pointer-events-none" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
+                                <path class="bg" fill="#ffffff" d="" />
+                            </svg>
+
+                            <div class="section-title text-[1.8vw] font-bold z-10"
                                 data-i18n="page.main.panel.total_fare.label">应付总金额</div>
-                            <div class="price-wrapper flex items-baseline mt-[0.5vw]">
+                            <div class="price-wrapper flex items-baseline mt-[0.5vw] z-10">
                                 <span class="currency text-[2.5vw] font-bold">¥</span>
-                                <span class="amount text-[3.5vw] font-bold leading-none">8</span>
+                                <span class="amount text-[3.5vw] font-bold leading-none z-10">8</span>
                             </div>
                         </div>
 
                         <div class="stretch grow"></div>
 
-                        <div class="h-[1vw]"></div>
-
-                        <div class="action-group flex flex-col gap-[1vw]">
+                        <div class="action-group flex flex-col">
                             <button
                                 class="tvm-button button-reset-by-distance relative w-full h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90">
                                 <svg class="absolute inset-0 w-full h-full">
@@ -268,6 +279,8 @@
                                 <span class="relative z-10 text-[1.8vw]"
                                     data-i18n="page.main.button.reset.label">重置</span>
                             </button>
+
+                            <div class="v-space h-[1.5vw]"></div>
 
                             <button
                                 class="tvm-button button-pay-by-distance relative w-full h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90">
@@ -280,7 +293,7 @@
                         </div>
                     </aside>
                 </div>
-                <div id="screen-by-amount" class="tvm-body flex-1 items-center justify-center bg-gray-100">
+                <div id="screen-by-amount" class="tvm-body flex-1 items-center justify-center bg-white">
                     <div class="ticket-selection flex flex-col items-center w-[22vw] p-[1.5vw]">
                         <div class="section-title text-[1.8vw] font-bold mb-[1vw]"
                             data-i18n="page.main.panel.ticket_count.label">票数
@@ -345,7 +358,7 @@
             </svg>
 
             <div class="modal-content relative z-10 w-full flex flex-col items-center">
-                <h2 class="text-[1.8vw] font-bold mb-[2vw]" data-i18n="modal.language.title">
+                <h2 class="text-[1.8vw] font-bold mb-[1.5vw]" data-i18n="modal.language.title">
                     选择语言 / Select language
                 </h2>
 
@@ -379,6 +392,16 @@
                         </svg>
                         <span class="relative z-10 text-[1.8vw] transition-colors duration-300" lang="ko-KR"
                             style="font-family: 'Inter', 'Source Han Sans KR', 'Source Han Sans SC', sans-serif;">한국어</span>
+                    </button>
+
+                    <button
+                        class="tvm-button lang-item relative w-full h-[4vw] flex items-center justify-center transition-all duration-300 hover:brightness-95 active:brightness-90 cursor-pointer"
+                        data-lang="lzh">
+                        <svg class="absolute inset-0 w-full h-full">
+                            <path class="bg fill-[#e8e8e8] transition-colors duration-300" d="" />
+                        </svg>
+                        <span class="relative z-10 text-[1.8vw] transition-colors duration-300" lang="ko-KR"
+                            style="font-family: 'Inter', 'Source Han Sans TC', 'Source Han Sans SC', sans-serif;">文言</span>
                     </button>
 
                     <button
