添加新功能（有 Bug）

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <svg class="absolute inset-0 w-full h-full">
                             <path class="bg fill-[#e8e8e8] transition-colors duration-300" d="" />
                         </svg>
-                        <span class="relative z-10 text-[1.8vw] transition-colors duration-300" lang="ko-KR"
+                        <span class="relative z-10 text-[1.8vw] transition-colors duration-300" lang="zh-TW"
                             style="font-family: 'Inter', 'Source Han Sans TC', 'Source Han Sans SC', sans-serif;">文言</span>
                     </button>
 
