--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_1.label">1
-                                    号线</span>
+                                    data-i18n="page.main.button.line_1.label">1 号线</span>
                             </button>
 
                             <button
@@ -135,8 +134,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_2.label">2
-                                    号线</span>
+                                    data-i18n="page.main.button.line_2.label">2 号线</span>
                             </button>
 
                             <button
@@ -146,8 +144,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_3.label">3
-                                    号线</span>
+                                    data-i18n="page.main.button.line_3.label">3 号线</span>
                             </button>
 
                             <button
@@ -157,8 +154,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_4.label">4
-                                    号线</span>
+                                    data-i18n="page.main.button.line_4.label">4 号线</span>
                             </button>
 
                             <button
@@ -168,8 +164,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_9.label">9
-                                    号线</span>
+                                    data-i18n="page.main.button.line_9.label">9 号线</span>
                             </button>
 
                             <button
@@ -179,8 +174,7 @@
                                     <path class="bg fill-[#e8e8e8] transition-all duration-300" d="" />
                                 </svg>
                                 <span class="relative z-10 text-[1.8vw] transition-colors duration-300"
-                                    data-i18n="page.main.button.line_10.label">10
-                                    号线</span>
+                                    data-i18n="page.main.button.line_10.label">10 号线</span>
                             </button>
                         </div>
                     </aside>
@@ -188,21 +182,26 @@
                     <main class="tvm-main"></main>
 
                     <div class="stretch grow"></div>
-                    <aside
-                        class="tvm-panel-right w-[22vw] h-full flex flex-col bg-white px-[1.5vw] shrink-0" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
 
-                        <div class="stretch grow"></div>
+                    <div class="w-[22vw] h-full flex flex-col bg-white shrink-0 relative px-[1.5vw] pb-[1.5vw]"
+                        style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
+                        <!-- 顶部弹簧：控制整体垂直居中/靠下 -->
+                        <div class="grow basis-0"></div>
 
-                        <div class="ticket-selection relative flex flex-col items-center p-[1.5vw]">
-                            <svg
-                                class="absolute inset-0 w-full h-full pointer-events-none" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
+                        <!-- 票数选择区域 -->
+                        <div class="ticket-selection relative flex flex-col items-center p-[1.5vw] shrink-0">
+                            <!-- 背景 SVG：现在它会相对于已缩进的容器定位，圆角将可见 -->
+                            <svg class="absolute inset-0 w-full h-full pointer-events-none"
+                                style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
                                 <path class="bg" fill="#ffffff" d="" />
                             </svg>
 
-                            <div class="section-title text-[1.8vw] font-bold mb-[1vw] z-10"
-                                data-i18n="page.main.panel.ticket_count.label">票数</div>
+                            <div class="section-title relative text-[1.8vw] font-bold mb-[1vw] z-10"
+                                data-i18n="page.main.panel.ticket_count.label">
+                                票数
+                            </div>
 
-                            <div class="counter-main flex items-center justify-between w-full mb-[1vw]">
+                            <div class="counter-main relative flex items-center justify-between w-full mb-[1vw] z-10">
                                 <button
                                     class="btn-counter btn-minus tvm-button relative w-[4vw] h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                                     data-value="-">
@@ -213,7 +212,7 @@
                                         class="relative z-10 w-[1.5vw] h-[1.5vw]" alt="-">
                                 </button>
 
-                                <span class="count-value text-[3.5vw] font-bold z-10" style="line-height: 1;">2</span>
+                                <span class="count-value text-[3.5vw] font-bold" style="line-height: 1;">2</span>
 
                                 <button
                                     class="btn-counter btn-plus tvm-button relative w-[4vw] h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
@@ -226,7 +225,7 @@
                                 </button>
                             </div>
 
-                            <div class="counter-quick flex gap-[1vw] w-full">
+                            <div class="counter-quick relative flex gap-[1vw] w-full z-10">
                                 <button
                                     class="btn-quick tvm-button relative flex-1 h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                                     data-value="-2">
@@ -236,7 +235,6 @@
                                     <img src="./resources/button_contents/minus_2.svg" class="relative z-10 h-[1.8vw]"
                                         alt="-2">
                                 </button>
-
                                 <button
                                     class="btn-quick tvm-button relative flex-1 h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90"
                                     data-value="+2">
@@ -249,28 +247,31 @@
                             </div>
                         </div>
 
-                        <div class="h-[1.5vw]"></div>
+                        <!-- 两个主模块之间的间距 -->
+                        <div class="h-[1.5vw] shrink-0"></div>
 
-                        <!-- <div class="w-[14vw] h-[0.3vw] bg-gray-300 mx-auto rounded-full"></div> -->
-
-                        <!-- <div class="h-[1.5vw]"></div> -->
-
-                        <div class="fare-display relative flex flex-col items-center p-[1.5vw]">
-                            <svg class="absolute inset-0 w-full h-full pointer-events-none" style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
+                        <!-- 金额显示区域 -->
+                        <div class="fare-display relative flex flex-col items-center p-[1.5vw] shrink-0">
+                            <svg class="absolute inset-0 w-full h-full pointer-events-none"
+                                style="filter: drop-shadow(0 0 0.8vw rgba(0,0,0,0.15));">
                                 <path class="bg" fill="#ffffff" d="" />
                             </svg>
 
-                            <div class="section-title text-[1.8vw] font-bold z-10"
-                                data-i18n="page.main.panel.total_fare.label">应付总金额</div>
-                            <div class="price-wrapper flex items-baseline mt-[0.5vw] z-10">
+                            <div class="section-title relative text-[1.8vw] font-bold z-10"
+                                data-i18n="page.main.panel.total_fare.label">
+                                应付总金额
+                            </div>
+                            <div class="price-wrapper relative flex items-baseline mt-[0.5vw] z-10">
                                 <span class="currency text-[2.5vw] font-bold">¥</span>
-                                <span class="amount text-[3.5vw] font-bold leading-none z-10">8</span>
+                                <span class="amount text-[3.5vw] font-bold leading-none" style="line-height: 0.8;">8</span>
                             </div>
                         </div>
 
-                        <div class="stretch grow"></div>
+                        <!-- 中间弹簧：将操作按钮推到底部 -->
+                        <div class="grow basis-0"></div>
 
-                        <div class="action-group flex flex-col">
+                        <!-- 底部操作按钮组 -->
+                        <div class="action-group flex flex-col shrink-0">
                             <button
                                 class="tvm-button button-reset-by-distance relative w-full h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90">
                                 <svg class="absolute inset-0 w-full h-full">
@@ -280,7 +281,7 @@
                                     data-i18n="page.main.button.reset.label">重置</span>
                             </button>
 
-                            <div class="v-space h-[1.5vw]"></div>
+                            <div class="h-[1.5vw]"></div>
 
                             <button
                                 class="tvm-button button-pay-by-distance relative w-full h-[4vw] flex items-center justify-center cursor-pointer transition-all duration-300 hover:brightness-95 active:brightness-90">
@@ -291,7 +292,7 @@
                                     data-i18n="page.main.button.pay.label">支付</span>
                             </button>
                         </div>
-                    </aside>
+                    </div>
                 </div>
                 <div id="screen-by-amount" class="tvm-body flex-1 items-center justify-center bg-white">
                     <div class="ticket-selection flex flex-col items-center w-[22vw] p-[1.5vw]">
